# telecom_churn

./: .gitignore  README.md  pyproject.toml
data/: churn.parquet  test_features_binned.parquet  train_features_binned.parquet  train_features_binned_report.html
models/: Naive Bayes_model.pkl  Naive Bayes_model_2.pkl  SVM_model.pkl  SVM_model_2.pkl  thresholded_svc.pkl
notebooks/: 010_churn_dataset_exploration.ipynb  012_churn_modelling.ipynb  012_modelling.ipynb  01_churn_dataset_exploration.ipynb  02_modelling.ipynb  churn.csv  test_features_binned.csv  thresholded_svc.pkl  train_features.csv  train_features_binned.csv
src/churn/: analytics.py  config.py  modelling.py  paths.py  plot.py  preprocessing.py
