[tool.poetry]
name = "churn"
version = "0.1.0"
description = ""
authors = ["Borja <borjaregueral@gmail.com>"]
readme = "README.md"
packages = [{include = "churn", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
pandas = "^2.2.2"
scikit-learn = "^1.5.1"
path = "^17.0.0"
logging = "^0.4.9.6"
pyarrow = "^17.0.0"
klib = "^1.3.1"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
multimethod = "^1.12"
ipython = "^8.26.0"
pip = "^24.2"
tqdm = "^4.66.5"
ydata-profiling = "^4.9.0"
pgmpy = "^0.1.26"
bnlearn = "^0.8.9"
feature-engine = "^1.8.0"
optuna = "^3.6.1"
imbalanced-learn = "^0.12.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
