[tool.poetry]
name = "churn"
version = "0.1.0"
description = ""
authors = ["Borja <borjaregueral@gmail.com>"]
readme = "README.md"
packages = [{include = "churn", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
pandas = "^2.2.2"
scikit-learn = "^1.5.1"
path = "^17.0.0"
logging = "^0.4.9.6"
klib = "^1.3.1"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
multimethod = "^1.12"
ipython = "^8.26.0"
pip = "^24.2"
tqdm = "^4.66.5"
ydata-profiling = "^4.9.0"
feature-engine = "^1.8.0"
optuna = "^3.6.1"
black = "^24.8.0"
isort = "^5.13.2"
causalml = "^0.15.1"
pygam = "^0.9.1"
imblearn = "^0.0"
pyarrow = "^17.0.0"
duecredit = "^0.10.2"
nbconvert = "^7.16.4"



[tool.poetry.group.dev.dependencies]
nbstripout = "^0.7.1"
ipykernel = "^6.29.5"
jupyter = "^1.1.1"
ipywidgets = "^8.1.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
